--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,14 @@ Package: biologicToolsSC
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Stefan",
+           family = "Boeing",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "stefan.boeing@yahoo.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
+Imports:
+    Matrix
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
